--- a/TankBattleGame/Config/DefaultGame.ini
+++ b/TankBattleGame/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D9C0C78141C7BF7DA3349C9FC4B5B044
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
