--- a/TankBattleGame/Config/DefaultEngine.ini
+++ b/TankBattleGame/Config/DefaultEngine.ini
@@ -7,8 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
+EditorStartupMap=/Game/_Level/BattleGround.BattleGround
+GameDefaultMap=/Game/_Level/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/Blueprints/TankBattleGameMode_BP.TankBattleGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
