Controller Ready Navigation (Click start button -> go to Battleground level)

--- a/TankBattleGame/Config/DefaultInput.ini
+++ b/TankBattleGame/Config/DefaultInput.ini
@@ -38,6 +38,7 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
++ActionMappings=(ActionName="Exit",Key=BackSpace,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
@@ -46,4 +47,5 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
+
 
