--- a/TankBattleGame/Config/DefaultEngine.ini
+++ b/TankBattleGame/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_Level/BattleGround.BattleGround
-GameDefaultMap=/Game/_Level/BattleGround.BattleGround
+GameDefaultMap=/Game/_Level/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/TankBattleGameMode_BP.TankBattleGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -51,5 +51,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
