Using virtual and override

--- a/TankBattleGame/Config/DefaultGame.ini
+++ b/TankBattleGame/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D9C0C78141C7BF7DA3349C9FC4B5B044
+CopyrightNotice=Tank Battle Game Play
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
-
